samples/_failures_safe/1761339174_7f7af7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57acd355.c: In function ‘main’:
./samples/SAFE/__tmp_57acd355.c:155:5: error: expected identifier or ‘(’ at end of input
  155 |     char
      |     ^~~~
./samples/SAFE/__tmp_57acd355.c:155:5: error: expected declaration or statement at end of input
